--- a/Website.html
+++ b/Website.html
@@ -6,7 +6,7 @@
     <title>Website</title>
 </head>
 <body>
-    <h1><a href="index.html">Cheese</a></h>
+    <h1><a href="index.html">Cheese</a></h1>
 
      <div>
          <h1>About Me</h1>
@@ -18,7 +18,12 @@
         <li>My Computer</li>
     </ol>
 </div>
-
+<div>
+<form action="input">
+    <label for="fname">First Name:</label><br>
+<input type="text" id="fname" name="fname"><br>
+</form>
+</div>
 
 
 </body>
