--- a/Website.html
+++ b/Website.html
@@ -8,7 +8,7 @@
 <body>
     <h1><a href="index.html">Cheese</a></h1>
 
-     <div>
+<div>
          <h1>About Me</h1>
         <p>I am a computer sciense student learning coding at MCAA. And Mrs. Lott is cool.</p>
     <ol>
@@ -18,11 +18,21 @@
         <li>My Computer</li>
     </ol>
 </div>
-<div>
-<form action="input">
-    <label for="fname">First Name:</label><br>
-<input type="text" id="fname" name="fname"><br>
-</form>
+
+<div> 
+     <form action="input">
+        <label for="fname">First Name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last Name</label><br>
+        <input type="text" id="lname" name="lname"><br>
+        <label for="email">Email</label><br>
+        <input type="email" id="email" name="email"><br>
+        <label for="phone">Phone Number</label><br>
+        <input type="tel" id="phone" name="phone"><br>
+        <label for="message">Message Here</label><br>
+        <input type="text" id="message" name="message"><br>
+        <input type="submit" value="Submit">
+     </form>
 </div>
 
 
