--- a/Website.html
+++ b/Website.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
+
+<link rel="stylesheet" href="stylesheet.css">
+
 </head>
 <body>
     <h1><a href="index.html">Cheese</a></h1>
